Reorganized GAE-Studio structure